[gd_scene load_steps=85 format=3 uid="uid://bw12ss2iy2k5a"]

[ext_resource type="Script" uid="uid://bbqf8b1b7cuw7" path="res://scrips/player.gd" id="1_6qdiq"]
[ext_resource type="Texture2D" uid="uid://bgc28jbve86le" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 01.png" id="2_60mlk"]
[ext_resource type="Texture2D" uid="uid://c5pyp6i5owqw8" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/18-Air Attack 1/Air Attack 1 01.png" id="2_bj30b"]
[ext_resource type="Texture2D" uid="uid://cfkt7ihsnlrs3" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 01.png" id="2_smehm"]
[ext_resource type="Texture2D" uid="uid://l78it43do20a" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 02.png" id="3_i4ail"]
[ext_resource type="Texture2D" uid="uid://bh3ecbm2dbet" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/18-Air Attack 1/Air Attack 1 02.png" id="3_jc3p3"]
[ext_resource type="Texture2D" uid="uid://cfyv7eevdmx0b" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 02.png" id="3_ur7pv"]
[ext_resource type="Texture2D" uid="uid://bbkdgrhssj3qx" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 03.png" id="4_a38lo"]
[ext_resource type="Script" uid="uid://bugqbebgxshr6" path="res://scrips/cooldown.gd" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://g2myniahbjsr" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/18-Air Attack 1/Air Attack 1 03.png" id="4_hax0n"]
[ext_resource type="Texture2D" uid="uid://ctqguif84xhiu" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 03.png" id="4_y4r1p"]
[ext_resource type="Texture2D" uid="uid://bi21tchqrplso" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 01.png" id="5_4ni07"]
[ext_resource type="Texture2D" uid="uid://nn5u4rhaoeg0" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 04.png" id="5_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dguklb4usonje" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 01.png" id="5_t4otl"]
[ext_resource type="Texture2D" uid="uid://bpgfqywg7avmv" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 05.png" id="6_3v2ag"]
[ext_resource type="Texture2D" uid="uid://cd1qf5s8xvpey" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 02.png" id="6_j2b1d"]
[ext_resource type="Texture2D" uid="uid://bglninu4kmnkc" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 02.png" id="6_l71n6"]
[ext_resource type="Texture2D" uid="uid://cv1e4syvvro4p" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/19-Air Attack 2/Air Attack 2 03.png" id="7_cs1tg"]
[ext_resource type="Texture2D" uid="uid://dbs287cyrin10" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 03.png" id="7_ke2ow"]
[ext_resource type="Texture2D" uid="uid://bu2ye37d8d4xh" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 01.png" id="8_f1ej7"]
[ext_resource type="Texture2D" uid="uid://brj7m320av8sb" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 04.png" id="8_ujl30"]
[ext_resource type="Texture2D" uid="uid://bjryitd7jwmye" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="9_oprun"]
[ext_resource type="Texture2D" uid="uid://boht72lcve820" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="10_a8ls1"]
[ext_resource type="Texture2D" uid="uid://cb70wx5sj7um5" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 01.png" id="11_2dvfe"]
[ext_resource type="Texture2D" uid="uid://dyxli5f43lw7w" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="11_qfm1y"]
[ext_resource type="Texture2D" uid="uid://cd5xj38e1xx54" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="12_fulsm"]
[ext_resource type="Texture2D" uid="uid://xcf2ctgwceh2" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 02.png" id="12_giy8y"]
[ext_resource type="Texture2D" uid="uid://k5v4m187ilu4" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="13_4r5pv"]
[ext_resource type="Texture2D" uid="uid://70m6hffmre7k" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/16-Attack 2/Attack 2 03.png" id="13_fdfoy"]
[ext_resource type="Texture2D" uid="uid://g4xe8ht21y75" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/17-Attack 3/Attack 3 01.png" id="14_hhpqf"]
[ext_resource type="Texture2D" uid="uid://5bdwve07hjkg" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/17-Attack 3/Attack 3 02.png" id="15_g5jhy"]
[ext_resource type="Texture2D" uid="uid://c235rfec5gadq" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/17-Attack 3/Attack 3 03.png" id="16_holxr"]
[ext_resource type="Texture2D" uid="uid://y8tksjvmphvj" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 01.png" id="21_42b1b"]
[ext_resource type="Texture2D" uid="uid://boqy28j5gbot2" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 02.png" id="22_h7ic4"]
[ext_resource type="Texture2D" uid="uid://b1tsp3gqmecsx" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 03.png" id="23_au7lq"]
[ext_resource type="Texture2D" uid="uid://bxg4xd07dwa04" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/06-Hit/Hit 04.png" id="24_nubpm"]
[ext_resource type="Texture2D" uid="uid://cmylilk80g3f4" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/12-Fall Sword/Fall Sword 01.png" id="25_ua5cf"]
[ext_resource type="Texture2D" uid="uid://b3fl0p2dyvaoq" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 01.png" id="26_holxr"]
[ext_resource type="Texture2D" uid="uid://bbv4xhe3e5r53" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/20-Throw Sword/Throw Sword 01.png" id="26_mx1m4"]
[ext_resource type="Texture2D" uid="uid://d1gfcsd4lyrrk" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/04-Fall/Fall 01.png" id="26_ua5cf"]
[ext_resource type="Texture2D" uid="uid://dylnthp8kb6ye" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/20-Throw Sword/Throw Sword 02.png" id="27_4gjji"]
[ext_resource type="Texture2D" uid="uid://c8i88sob84g3p" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 02.png" id="27_mx1m4"]
[ext_resource type="Texture2D" uid="uid://dituwu35aqika" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 03.png" id="28_4gjji"]
[ext_resource type="Texture2D" uid="uid://clqwp3yau8u65" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/20-Throw Sword/Throw Sword 03.png" id="28_u2ulf"]
[ext_resource type="Texture2D" uid="uid://801mfiu5ghkt" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 04.png" id="29_u2ulf"]
[ext_resource type="Texture2D" uid="uid://n723862xsa0l" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/01-Idle/Idle 05.png" id="30_6e8lb"]
[ext_resource type="Texture2D" uid="uid://bb06ugcyuamsn" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 01.png" id="36_51ujp"]
[ext_resource type="Texture2D" uid="uid://cw6g2nrwui3n5" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 02.png" id="37_tk41t"]
[ext_resource type="Texture2D" uid="uid://cdf0vljrj8x7k" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 03.png" id="38_fuw3a"]
[ext_resource type="Texture2D" uid="uid://1u3h0mr26gku" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 01.png" id="40_2gdjj"]
[ext_resource type="Texture2D" uid="uid://d0r6j04kqbgou" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 01.png" id="40_51ujp"]
[ext_resource type="Texture2D" uid="uid://by3otqrmvtml" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 02.png" id="41_sc3ue"]
[ext_resource type="Texture2D" uid="uid://c1be864tc16uq" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 02.png" id="41_tk41t"]
[ext_resource type="Texture2D" uid="uid://cw0m6pn5nyukn" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/03-Jump/Jump 03.png" id="42_fuw3a"]
[ext_resource type="Texture2D" uid="uid://dkhx6jorcfu63" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 03.png" id="42_lxlsd"]
[ext_resource type="Texture2D" uid="uid://cn8qe3xxxrt1p" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 04.png" id="43_ha2mi"]
[ext_resource type="Texture2D" uid="uid://b5a5nwxn3ltp3" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 05.png" id="44_apa73"]
[ext_resource type="Texture2D" uid="uid://cu0ate7gkt8cd" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose without Sword/02-Run/Run 06.png" id="45_74r1k"]
[ext_resource type="Texture2D" uid="uid://dwqhy6u7j7t3o" path="res://sprites/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Medium Bars/1.png" id="47_2gdjj"]
[ext_resource type="Script" uid="uid://bhoi7gqo7ibf5" path="res://scrips/Health_bar.gd" id="49_lxlsd"]
[ext_resource type="Texture2D" uid="uid://bdiv2gfqqw4tn" path="res://sprites/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Colors/4.png" id="50_2gdjj"]
[ext_resource type="Texture2D" uid="uid://5jwxq5np2mh1" path="res://sprites/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Medium Bars/5.png" id="50_ha2mi"]
[ext_resource type="Texture2D" uid="uid://ceajbkaeem2hi" path="res://sprites/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Medium Bars/4.png" id="51_apa73"]
[ext_resource type="Texture2D" uid="uid://x1x8l4mob2j1" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Run 01.png" id="64_2w11d"]
[ext_resource type="Texture2D" uid="uid://55c3lhwjcqov" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Fall 01.png" id="64_6c3st"]
[ext_resource type="Texture2D" uid="uid://idb1jxpkmoc3" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Fall 02.png" id="65_1da1t"]
[ext_resource type="Texture2D" uid="uid://b8b2d1di4h1yc" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Run 02.png" id="65_770dr"]
[ext_resource type="Texture2D" uid="uid://hfm1ytam8lyf" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Run 03.png" id="66_8f1cb"]
[ext_resource type="Texture2D" uid="uid://bdpb17cag8leb" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Fall 03.png" id="66_p21yu"]
[ext_resource type="Texture2D" uid="uid://djecortslbbiu" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Fall 04.png" id="67_irpag"]
[ext_resource type="Texture2D" uid="uid://df15xogoqva3y" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Run 04.png" id="67_vdulj"]
[ext_resource type="Texture2D" uid="uid://cx8sfl8u2h5om" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Fall 05.png" id="68_bpsgo"]
[ext_resource type="Texture2D" uid="uid://dv8bobcuhiew1" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Run 05.png" id="68_vau08"]
[ext_resource type="Texture2D" uid="uid://byo0ff8s3gewt" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 01.png" id="69_jx8is"]
[ext_resource type="Texture2D" uid="uid://mlrj1roynalv" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 02.png" id="70_vx63k"]
[ext_resource type="Texture2D" uid="uid://bn2oucts7b1dq" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 03.png" id="71_lw0jh"]
[ext_resource type="Texture2D" uid="uid://owi4j8rko53o" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 04.png" id="72_ry8ed"]
[ext_resource type="Texture2D" uid="uid://b0fmpirei38a8" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 05.png" id="73_au8ao"]
[ext_resource type="Texture2D" uid="uid://dulk4p3fq4601" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Dust Particles/Jump 06.png" id="74_w5j5w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bj30b")
}, {
"duration": 1.0,
"texture": ExtResource("3_jc3p3")
}, {
"duration": 1.0,
"texture": ExtResource("4_hax0n")
}],
"loop": true,
"name": &"air_attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_t4otl")
}, {
"duration": 1.0,
"texture": ExtResource("6_j2b1d")
}, {
"duration": 1.0,
"texture": ExtResource("7_cs1tg")
}],
"loop": true,
"name": &"air_attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_60mlk")
}, {
"duration": 1.0,
"texture": ExtResource("3_i4ail")
}, {
"duration": 1.0,
"texture": ExtResource("4_a38lo")
}],
"loop": false,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_2dvfe")
}, {
"duration": 1.0,
"texture": ExtResource("12_giy8y")
}, {
"duration": 1.0,
"texture": ExtResource("13_fdfoy")
}],
"loop": true,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_hhpqf")
}, {
"duration": 1.0,
"texture": ExtResource("15_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("16_holxr")
}],
"loop": true,
"name": &"attack_3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4ni07")
}, {
"duration": 1.0,
"texture": ExtResource("6_l71n6")
}, {
"duration": 1.0,
"texture": ExtResource("7_ke2ow")
}, {
"duration": 1.0,
"texture": ExtResource("8_ujl30")
}],
"loop": false,
"name": &"attacked",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_42b1b")
}, {
"duration": 1.0,
"texture": ExtResource("22_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("23_au7lq")
}, {
"duration": 1.0,
"texture": ExtResource("24_nubpm")
}],
"loop": true,
"name": &"attacked_ns",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_ua5cf")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_ua5cf")
}],
"loop": true,
"name": &"fall_ns",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_smehm")
}, {
"duration": 1.0,
"texture": ExtResource("3_ur7pv")
}, {
"duration": 1.0,
"texture": ExtResource("4_y4r1p")
}, {
"duration": 1.0,
"texture": ExtResource("5_d2wvv")
}, {
"duration": 1.0,
"texture": ExtResource("6_3v2ag")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("27_mx1m4")
}, {
"duration": 1.0,
"texture": ExtResource("28_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("29_u2ulf")
}, {
"duration": 1.0,
"texture": ExtResource("30_6e8lb")
}],
"loop": false,
"name": &"idle_hs",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_51ujp")
}, {
"duration": 1.0,
"texture": ExtResource("37_tk41t")
}, {
"duration": 1.0,
"texture": ExtResource("38_fuw3a")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_51ujp")
}, {
"duration": 1.0,
"texture": ExtResource("41_tk41t")
}, {
"duration": 1.0,
"texture": ExtResource("42_fuw3a")
}],
"loop": false,
"name": &"jump_ns",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_mx1m4")
}, {
"duration": 1.0,
"texture": ExtResource("27_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("28_u2ulf")
}],
"loop": false,
"name": &"sword_throw",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f1ej7")
}, {
"duration": 1.0,
"texture": ExtResource("9_oprun")
}, {
"duration": 1.0,
"texture": ExtResource("10_a8ls1")
}, {
"duration": 1.0,
"texture": ExtResource("11_qfm1y")
}, {
"duration": 1.0,
"texture": ExtResource("12_fulsm")
}, {
"duration": 1.0,
"texture": ExtResource("13_4r5pv")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_2gdjj")
}, {
"duration": 1.0,
"texture": ExtResource("41_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("42_lxlsd")
}, {
"duration": 1.0,
"texture": ExtResource("43_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("44_apa73")
}, {
"duration": 1.0,
"texture": ExtResource("45_74r1k")
}],
"loop": false,
"name": &"walk_ns",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ej7"]
size = Vector2(17, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42b1b"]
size = Vector2(17, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsb7e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("64_6c3st")
}, {
"duration": 1.0,
"texture": ExtResource("65_1da1t")
}, {
"duration": 1.0,
"texture": ExtResource("66_p21yu")
}, {
"duration": 1.0,
"texture": ExtResource("67_irpag")
}, {
"duration": 1.0,
"texture": ExtResource("68_bpsgo")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("69_jx8is")
}, {
"duration": 1.0,
"texture": ExtResource("70_vx63k")
}, {
"duration": 1.0,
"texture": ExtResource("71_lw0jh")
}, {
"duration": 1.0,
"texture": ExtResource("72_ry8ed")
}, {
"duration": 1.0,
"texture": ExtResource("73_au8ao")
}, {
"duration": 1.0,
"texture": ExtResource("74_w5j5w")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("64_2w11d")
}, {
"duration": 1.0,
"texture": ExtResource("65_770dr")
}, {
"duration": 1.0,
"texture": ExtResource("66_8f1cb")
}, {
"duration": 1.0,
"texture": ExtResource("67_vdulj")
}, {
"duration": 1.0,
"texture": ExtResource("68_vau08")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2w11d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("64_2w11d")
}, {
"duration": 1.0,
"texture": ExtResource("65_770dr")
}, {
"duration": 1.0,
"texture": ExtResource("66_8f1cb")
}, {
"duration": 1.0,
"texture": ExtResource("67_vdulj")
}, {
"duration": 1.0,
"texture": ExtResource("68_vau08")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[node name="player" type="CharacterBody2D"]
position = Vector2(-1, -1)
collision_layer = 4
collision_mask = 23
script = ExtResource("1_6qdiq")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"fall_ns"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_f1ej7")
one_way_collision_margin = 0.0

[node name="Attack_Hitbox" type="RayCast2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(2, 2)
target_position = Vector2(15.5, 0)
collision_mask = 2
collide_with_areas = true

[node name="Attack_Cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
script = ExtResource("4_dqkch")

[node name="Attack_Animation" type="Timer" parent="."]
wait_time = 0.238
one_shot = true

[node name="Attack_Hitbox_behind" type="RayCast2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(2, 2)
target_position = Vector2(-15.5, 0)
collision_mask = 2
collide_with_areas = true

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0.219608, 0.027451, 1, 1)
z_index = 10
offset_left = -170.0
offset_top = -98.0
offset_right = -166.0
offset_bottom = -71.0
theme_override_colors/font_color = Color(0.678431, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0, 0, 1)
value = 100.0
show_percentage = false

[node name="5" type="Sprite2D" parent="HealthBar"]
position = Vector2(51, 37)
texture = ExtResource("50_ha2mi")

[node name="1" type="Sprite2D" parent="HealthBar"]
position = Vector2(-11, 37)
texture = ExtResource("47_2gdjj")

[node name="4" type="Sprite2D" parent="HealthBar"]
position = Vector2(21, 37)
texture = ExtResource("51_apa73")

[node name="TextureProgressBar" type="TextureProgressBar" parent="HealthBar"]
layout_mode = 0
offset_left = 1.0
offset_top = 36.0
offset_right = 51.0
offset_bottom = 76.0
scale = Vector2(1.53846, 0.869836)
value = 100.0
texture_progress = ExtResource("50_2gdjj")
script = ExtResource("49_lxlsd")

[node name="Ground_detect" type="Area2D" parent="."]
position = Vector2(1, 1)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground_detect"]
position = Vector2(-0.5, 9.5)
shape = SubResource("RectangleShape2D_42b1b")
debug_color = Color(0.643157, 0.379537, 0.912668, 0.42)

[node name="DustParticles" type="AnimatedSprite2D" parent="."]
position = Vector2(-5, 0)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"jump"
frame_progress = 0.12022

[node name="DustParticles_flipped" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(9, 0)
sprite_frames = SubResource("SpriteFrames_2w11d")
animation = &"walk"
flip_h = true

[node name="SpeedTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="Sword_repawn" type="Timer" parent="."]
wait_time = 15.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Attack_Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Attack_Cooldown" to="Attack_Cooldown" method="_cooldown_set_attack"]
[connection signal="timeout" from="Attack_Animation" to="." method="_on_attack_animation_timeout"]
[connection signal="body_entered" from="Ground_detect" to="." method="_on_ground_detect_body_entered"]
[connection signal="body_exited" from="Ground_detect" to="." method="_on_ground_detect_body_exited"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Sword_repawn" to="." method="respawn_sword"]
